--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,10 +1,10 @@
-<% layout("/layouts/boilerplate") %>
+<% layout("/layouts/boilerplate") %> 
 
 <h3>All Listings</h3>
 <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
   <% for( let listing of allListing){ %>
     <a href="/listings/<%= listing._id %>" class="listing-link">
-  <div class="card col" >
+  <div class="card col listing-card" >
     <img
       src="<%= listing.image.url %>"
       class="card-img-top"
