--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -36,7 +36,7 @@
           required
         />
       </div>
-      <button class="btn btn-success">SignUp</button>
+      <button class="btn btn-success signup">SignUp</button>
     </form>
   </div>
 </div>
