--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,24 +1,66 @@
+<style>
+  /* css code for search bar*/
+.btn-search{
+  background-color: #fe424d;
+  color: #fff;
+  border-radius: 25px;
+  padding: 0 1rem 0 1rem;
+}
+.btn-search:hover{
+  background-color: #fe424d;
+  color: #fff;
+  opacity: 0.8;
+}
+.btn-search i{
+  display: inline;
+  margin-right: 0.5rem;
+}
+.inp-search{
+  border-radius: 25px;
+  padding: 0.5rem 3rem 0.5rem 3rem;
+  font-size: 1rem;
+}
+</style>
 <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top" ">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/"><i class="fa-regular fa-compass"></i></a>
+      <a class="navbar-brand" href="/root"><i class="fa-regular fa-compass"></i></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link "  href="/">Home</a>
-          <a class="nav-link" href="/listings">All Listings</a>
-          <a class="nav-link" href="/listings/new">Add New Listing</a>
+          
+          <a class="nav-link" href="/listings">Explore</a>
+        
         </div>
         <div class="navbar-nav ms-auto">
-          <% if(!currUser) { %>
-          <a class="nav-link "  href="/signup">Sign up</a>
-          <a class="nav-link" href="/login">Log in</a>
-          <% } %>
-          <% if(currUser) { %>
+          <form class="d-flex" role="search" action="/listings/search" method="get">
+            <input class="form-control me-2 inp-search" type="search" placeholder="Search destinations" name="country" />
+            <button class="btn btn-search" type="submit">
+              <i class="fa-solid fa-magnifying-glass"></i>Search
+            </button>
+          </form>
+        </div>
+        <div class="navbar-nav ms-auto">
+          <a class="nav-link" href="/listings/new">Nest your home</a>
+          <% if(!currUser) { %> 
+          <a class="nav-link "  href="/signup"><b>Sign up</b></a>
+          <a class="nav-link" href="/login"><b>Log in</b></a>
+         <% } %>
+          <% if(currUser) { %> 
           <a class="nav-link" href="/logout">Log out</a>
           <% } %>
         </div>
       </div>
     </div>
   </nav>
+  <script>
+    const logo = document.querySelector('.navbar-brand');
+
+logo.addEventListener('click', () => {
+  window.location.href = '/root';
+
+});
+
+  </script>
+  
