--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,27 +1,93 @@
-<% layout("/layouts/boilerplate") %> 
+<% layout("/layouts/boilerplate") %>
+<div id="filters">
+  <div class="filter" data-category="all">
+    <div><i class="fa-solid fa-bars"></i></div>
+    <p>All</p>
+  </div>
 
-<h3>All Listings</h3>
-<div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
-  <% for( let listing of allListing){ %>
-    <a href="/listings/<%= listing._id %>" class="listing-link">
-  <div class="card col listing-card" >
-    <img
-      src="<%= listing.image.url %>"
-      class="card-img-top"
-      alt="listing_img"
-      style="height:20rem"
-    />
-    <div class="card-img-overlay"> 
-      &#x2764;
-    </div>
-    <div class="card-body">
-      <p class="card-text">
-        <b><%= listing.title %></b>
-        <br />
-        &#8377; <%= listing.price.toLocaleString("en-in")%> /night
-      </p>
+  <div class="filter" data-category="Trending">
+    <div><i class="fa-solid fa-fire"></i></div>
+    <p>Trending</p>
+  </div>
+  <div class="filter" data-category="Rooms">
+    <div><i class="fa-solid fa-bed"></i></div>
+    <p>Rooms</p>
+  </div>
+  <div class="filter" data-category="Iconic Cities">
+    <div><i class="fa-solid fa-mountain-city"></i></div>
+    <p>Iconic Cities</p>
+  </div>
+  <div class="filter" data-category="Beachfront">
+    <div><i class="fa-solid fa-umbrella-beach"></i></div>
+    <p>Beachfront</p>
+  </div>
+  <div class="filter" data-category="Amazing Pools">
+    <div><i class="fa-solid fa-water-ladder"></i></div>
+    <p>Amazing Pools</p>
+  </div>
+
+  <div class="filter" data-category="Arctic">
+    <div><i class="fa-solid fa-snowflake"></i></div>
+    <p>Arctic</p>
+  </div>
+  <div class="filter" data-category="Castels">
+    <div><i class="fa-brands fa-fort-awesome"></i></div>
+    <p>Castels</p>
+  </div>
+
+  <div class="filter" data-category="Farms">
+    <div><i class="fa-solid fa-cow"></i></div>
+    <p>Farms</p>
+  </div>
+  <div class="filter" data-category="Domes">
+    <div><i class="fa-solid fa-igloo"></i></div>
+    <p>Domes</p>
+  </div>
+  <div class="tax-toggle">
+    <div class="form-check-reverse form-switch">
+      <input
+        class="form-check-input"
+        type="checkbox"
+        role="switch"
+        id="flexSwitchCheckDefault"
+      />
+      <label class="form-check-label" for="flexSwitchCheckDefault"
+        >Display total after taxes</label
+      >
     </div>
   </div>
-  <% }%>
-</a>
+</div>
+<% if (typeof message !== 'undefined' && message) { %>
+  <div class="search_message">
+    <%= message %>
+  </div>
+<% } %>
+
+<div
+  class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1"
+  id="listings-container"
+>
+<% if (allListing.length > 0) { %>
+  <% for( let listing of allListing){ %>
+  <a href="/listings/<%= listing._id %>" class="listing-link">
+    <div class="card col listing-card" data-category="<%= listing.category %>">
+      <img
+        src="<%= listing.image.url %>"
+        class="card-img-top"
+        alt="listing_img"
+        style="height: 20rem"
+      />
+      <div class="card-img-overlay">&#x2764;</div>
+      <div class="card-body">
+        <p class="card-text">
+          <b><%= listing.title %></b>
+          <br />
+          &#8377; <%= listing.price.toLocaleString("en-in")%> /night
+          <i class="tax-info"> &nbsp; &nbsp;+18% GST</i>
+        </p>
+      </div>
+    </div>
+    <% }%>
+    <% } %>
+  </a>
 </div>
