--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -26,7 +26,7 @@
           required
         />
       </div>
-      <button class="btn btn-success">Login</button>
+      <button class="btn btn-success login">Login</button>
     </form>
   </div>
 </div>
